--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ body {
     height: 100%;
     position: absolute;
     overflow: hidden;
+    min-width: 1000px;
 }
 .tv {
     height: 335%;
@@ -22,12 +23,13 @@ body {
 }
 #tv {
     z-index: -5;
-    filter: drop-shadow(0px 5px 3px rgba(0, 0, 0, 0.8));
     background-image: url("assets/low_resolution/tv.png");
+    display: none;
 }
 #tv_body {
     z-index: -5;
     background-image: url("assets/low_resolution/tv_body.png");
+    filter: drop-shadow(0px 10px 5px rgba(65, 42, 37, 0.5));
 }
 #tv_screen {
     z-index: -5;
@@ -62,22 +64,30 @@ body {
     background-image: url("assets/low_resolution/room.png");
     background-size: cover;
     background-position: 50% 50%;
-    position: absolute;
     height: 100%;
     width: 100%;
     z-index: -999;
 }
+#room span {
+    display: inline-block;
+    background-color: white;
+    /* margin: 75px 75px; */
+    padding: 25px 50px;
+    position: relative;
+}
 #room h1 {
-    margin-left: 50px;
     font-size: 48pt;
-    font-family: "Baskervville";
+    font-family: "Alegreya SC";
+    font-weight: 500;
+    font-variant: small-caps;
+    margin: 0px;
 }
 #room p {
-    font-size: 18pt;
-    font-family: "Baskervville";
-    margin-left: 50px;
+    font-size: 20pt;
+    /* font-family: "Cardo"; */
+    font-family: 'Kreon', Tahoma, sans-serif;
     width: calc(40% * 40% - 100px);
-
+    margin: 0px;
 }
 #background {
     position: absolute;
