--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
     position: absolute;
     overflow: hidden;
     min-width: 1000px;
+    min-height: 600px;
 }
 .tv {
     height: 335%;
@@ -24,7 +25,6 @@ body {
 #tv {
     z-index: -5;
     background-image: url("assets/low_resolution/tv.png");
-    display: none;
 }
 #tv_body {
     z-index: -5;
@@ -35,6 +35,7 @@ body {
     z-index: -5;
     background-image: url('assets/low_resolution/tv_screen.png');
     mix-blend-mode: multiply;
+    opacity: 0;
 }
 #stand {
     height: 285%;
@@ -68,27 +69,90 @@ body {
     width: 100%;
     z-index: -999;
 }
-#room span {
+#about {
     display: inline-block;
-    background-color: white;
+    background-image: linear-gradient(to bottom right,
+                                    rgba(255, 255, 255, 0) 0%,
+                                    rgba(255, 255, 255, 0) 5%,
+                                    rgba(255, 255, 255, 0.5) 15%,
+                                    rgba(255, 255, 255, 0) 50%);
     /* margin: 75px 75px; */
     padding: 25px 50px;
-    position: relative;
+    height: 75%;
+    position: absolute;
+    overflow: hidden;
+    border-width: 5px 0px 0px 5px;
+    border-style: solid;
+    border-color: rgba(255, 255, 255, 0.5);
+    border-radius: 25px;
 }
-#room h1 {
+#about hr {
+    margin-top: -10px;
+    margin-bottom: 30px;
+    height: 10px;
+    border: none;
+    background-image: linear-gradient(90deg,
+                                    rgba(0, 0, 0, 0.5),
+                                    rgba(0, 0, 0, 0.5) 33.33%,
+                                    transparent 33.33%,
+                                    transparent 100%);
+    background-size: 5px 100%;
+}
+#about h1 {
     font-size: 48pt;
-    font-family: "Alegreya SC";
+    font-family: "Zilla Slab", Verdana, Geneva, Tahoma, sans-serif;
+    /* font-family: "Alegreya SC", Verdana, Geneva, Tahoma, sans-serif; */
     font-weight: 500;
-    font-variant: small-caps;
     margin: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: black;
+    /* padding-left: 15px;
+    background-image: linear-gradient(to right, rgba(255, 56, 21, 0.5) 0%, rgba(0, 0, 0, 0) 100%); */
 }
-#room p {
+#about p {
     font-size: 20pt;
     /* font-family: "Cardo"; */
-    font-family: 'Kreon', Tahoma, sans-serif;
-    width: calc(40% * 40% - 100px);
+    font-family: 'Kreon', 'Trebuchet MS', Cambria, Cochin, Times, 'Times New Roman', serif;
+    width: calc(40% * 40%);
     margin: 0px;
+    margin-bottom: 10px;
 }
+#about_inner {
+    /* background-color: grey; */
+    position: absolute;
+    left: 0px;
+    width: 100%;
+    height: 80%;
+    margin-top: 25px;
+}
+#link_block {
+    position: absolute;
+    top: 50px;
+    right: 50px;
+}
+.link_icon {
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+    transition: 0.2s;
+}
+.link_icon:hover {
+    filter: invert(0.15);
+}
+.link_icon:active {
+    transform: scale(0.9);
+}
+#musescore {
+    background-image: url('assets/icons/musescore.png');
+}
+#youtube {
+    background-image: url('assets/icons/youtube.png');
+}
+#github {
+    background-image: url('assets/icons/github.png');
+}
+
 #background {
     position: absolute;
     width: 100%;
@@ -240,23 +304,23 @@ body {
     filter: invert(1) drop-shadow(0px 0px 6pt rgba(0, 0, 0, 0.9));
 }
 #menu_block h1:nth-child(1):after {
-    background-image: url("assets/about.png");
+    background-image: url("assets/icons/about.png");
     background-size: 40pt;
 }
 #menu_block h1:nth-child(2):after {
-    background-image: url("assets/projects.png");
+    background-image: url("assets/icons/projects.png");
     background-size: 35pt;
 }
 #menu_block h1:nth-child(3):after {
-    background-image: url("assets/music.png");
+    background-image: url("assets/icons/music.png");
     background-size: 40pt;
 }
 #menu_block h1:nth-child(4):after {
-    background-image: url("assets/resources.png");
+    background-image: url("assets/icons/resources.png");
     background-size: 40pt;
 }
 #menu_block h1:nth-child(5):after {
-    background-image: url("assets/resume.png");
+    background-image: url("assets/icons/resume.png");
     background-size: 35pt;
 }
 #select_animation {
