--- a/index.css
+++ b/index.css
@@ -99,19 +99,21 @@ body {
                                     transparent 100%);
     background-size: 5px 100%;
 }
-#about h1 {
+#about *, .music_tab * {
+    margin: 0px;
+}
+#about h1, .music_tab h1 {
     font-size: 48pt;
     font-family: "Zilla Slab", Verdana, Geneva, Tahoma, sans-serif;
     /* font-family: "Alegreya SC", Verdana, Geneva, Tahoma, sans-serif; */
     font-weight: 500;
-    margin: 0px;
     margin-top: 10px;
     margin-bottom: 10px;
     color: black;
     /* padding-left: 15px;
     background-image: linear-gradient(to right, rgba(255, 56, 21, 0.5) 0%, rgba(0, 0, 0, 0) 100%); */
 }
-#about p {
+#about p, .music_tab p, .music_tab li {
     font-size: 20pt;
     /* font-family: "Cardo"; */
     font-family: 'Kreon', 'Trebuchet MS', Cambria, Cochin, Times, 'Times New Roman', serif;
@@ -146,12 +148,15 @@ body {
 }
 #musescore {
     background-image: url('assets/icons/musescore.png');
+    filter: drop-shadow(0px 0px 5px rgba(26, 112, 184, 0.5));
 }
 #youtube {
     background-image: url('assets/icons/youtube.png');
+    filter: drop-shadow(0px 0px 5px rgba(255, 0, 0, 0.5));
 }
 #github {
     background-image: url('assets/icons/github.png');
+    filter: drop-shadow(0px 0px 5px rgba(100, 100, 100, 0.5));
 }
 
 #background {
@@ -211,6 +216,34 @@ body {
     position: absolute;
     z-index: 3;
 }
+#m1 a {
+    font-family: 'IM Fell DW Pica';
+    text-decoration: none;
+}
+#m1 a:after {
+    content: '';
+    width: 20pt;
+    height: 20pt;
+    background-size: cover;
+    display: inline-block;
+    position: relative;
+    top: 3pt;
+    left: 7pt;
+    margin-right: 7pt;
+}
+#trngl:after {
+    background-image: url('assets/icons/musescore.png');
+    filter: drop-shadow(0px 0px 3px rgba(26, 112, 184, 0.5));
+}
+#slappysloop:after {
+    background-image: url('assets/icons/musescore.png');
+    filter: drop-shadow(0px 0px 3px rgba(26, 112, 184, 0.5));
+}
+#richard_y:after {
+    background-image: url('assets/icons/youtube.png');
+    filter: drop-shadow(0px 0px 3px rgba(255, 0, 0, 0.5));
+}
+
 
 #name_block {
     position: absolute;
@@ -322,7 +355,7 @@ body {
 }
 #menu_block h1:after {
     content: '';
-    padding: 0pt 18pt;
+    padding: 0pt 20pt;
     filter: invert(0.9);
     opacity: 0.9;
     transition: 0.5s;
