--- a/index.css
+++ b/index.css
@@ -243,6 +243,13 @@ body {
     background-image: url('assets/icons/youtube.png');
     filter: drop-shadow(0px 0px 3px rgba(255, 0, 0, 0.5));
 }
+.cd {
+    width: 400px;
+    height: 400px;
+    background-image: url('assets/ideas/2.jpg');
+    background-size: cover;
+    text-align: right;
+}
 
 
 #name_block {
