--- a/index.css
+++ b/index.css
@@ -25,11 +25,12 @@ body {
 #tv {
     z-index: -5;
     background-image: url("assets/low_resolution/tv.png");
+	filter: drop-shadow(-75px 50px 15px rgba(0, 0, 0, 0.4));
 }
 #tv_body {
     z-index: -5;
     background-image: url("assets/low_resolution/tv_body.png");
-    filter: drop-shadow(0px 10px 5px rgba(65, 42, 37, 0.5));
+    filter: drop-shadow(-2px 8px 5px rgba(65, 42, 37, 0.9));
 }
 #tv_screen {
     z-index: -5;
@@ -47,7 +48,7 @@ body {
     /* right: 5.5%; */
     position: absolute;
     z-index: -10;
-    filter: drop-shadow(0px 20px 20px rgba(0, 0, 0, 0.3));
+    filter: drop-shadow(0px 20px 20px rgba(0, 0, 0, 0.3)) drop-shadow(-75px 50px 25px rgba(0, 0, 0, 0.5));
     background-image: url("assets/low_resolution/stand.png");
     background-size: cover;
     transition: 0.5s;
@@ -63,7 +64,7 @@ body {
     position: absolute;
 }
 #room {
-    background-image: url("assets/low_resolution/room.png");
+    background-image: url("assets/low_resolution/roomoo.png");
     background-size: cover;
     background-position: 50% 50%;
     height: 100%;
@@ -71,21 +72,21 @@ body {
     z-index: -999;
 }
 #about {
-    display: inline-block;
     background-image: linear-gradient(to bottom right,
-                                    rgba(255, 255, 255, 0) 0%,
-                                    rgba(255, 255, 255, 0) 5%,
-                                    rgba(255, 255, 255, 0.5) 15%,
-                                    rgba(255, 255, 255, 0) 50%);
-    /* margin: 75px 75px; */
+                                      rgba(255, 255, 255, 0) 0%,
+                                      rgba(255, 255, 255, 0) 5%,
+                                      rgba(255, 255, 255, 0.5) 15%,
+                                      rgba(255, 255, 255, 0) 50%);
+	mix-blend-mode: overlay;
+	margin: 75px 75px 75px 150px;
     padding: 25px 50px;
     height: 75%;
     position: absolute;
     overflow: hidden;
-    border-width: 5px 0px 0px 5px;
+    /* border-width: 5px 0px 0px 5px;
     border-style: solid;
-    border-color: rgba(255, 255, 255, 0.5);
-    border-radius: 25px;
+    border-color: rgba(255, 255, 255, 0.5); */
+    border-radius: 25px; 
 }
 #about hr {
     margin-top: -10px;
@@ -99,10 +100,10 @@ body {
                                     transparent 100%);
     background-size: 5px 100%;
 }
-#about *, .music_tab * {
+#about * {
     margin: 0px;
 }
-#about h1, .music_tab h1 {
+#about h1 {
     font-size: 48pt;
     font-family: "Zilla Slab", Verdana, Geneva, Tahoma, sans-serif;
     /* font-family: "Alegreya SC", Verdana, Geneva, Tahoma, sans-serif; */
@@ -113,26 +114,19 @@ body {
     /* padding-left: 15px;
     background-image: linear-gradient(to right, rgba(255, 56, 21, 0.5) 0%, rgba(0, 0, 0, 0) 100%); */
 }
-#about p, .music_tab p, .music_tab li {
+#about p {
     font-size: 20pt;
-    /* font-family: "Cardo"; */
     font-family: 'Kreon', 'Trebuchet MS', Cambria, Cochin, Times, 'Times New Roman', serif;
     width: calc(40% * 40%);
     margin: 0px;
     margin-bottom: 10px;
 }
-#about_inner {
-    /* background-color: grey; */
-    position: absolute;
-    left: 0px;
-    width: 100%;
-    height: 80%;
-    margin-top: 25px;
-}
 #link_block {
     position: absolute;
-    top: 50px;
-    right: 50px;
+	margin-top: 75px;
+	margin-left: 75px;
+	padding: 5px;
+	background-color: gray;
 }
 .link_icon {
     width: 50px;
@@ -203,54 +197,241 @@ body {
     background-position: 50% 100%;
     height: 150%;
 }
-#blue {
+#c15 {
     width: 100%;
     height: 100%;
     background-color: rgb(0, 96, 155);
     position: absolute;
     z-index: 1;
 }
+
 #music_block {
-    width: 100%;
-    height: 100%;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 3;
+}
+#music_block_title {
     position: absolute;
-    z-index: 3;
+	right: 75px;
+	bottom: 35px;
+	text-align: right;
+	transform: rotateX(-10deg) rotateY(10deg);
 }
-#m1 a {
-    font-family: 'IM Fell DW Pica';
-    text-decoration: none;
+#music_block_title h1 {
+	font-size: 72pt;
+    font-family: "Zilla Slab", Verdana, Geneva, Tahoma, sans-serif;
+    /* font-family: "Alegreya SC", Verdana, Geneva, Tahoma, sans-serif; */
+    font-weight: 500;
+	margin-bottom: -30px;
 }
-#m1 a:after {
-    content: '';
-    width: 20pt;
-    height: 20pt;
-    background-size: cover;
-    display: inline-block;
-    position: relative;
-    top: 3pt;
-    left: 7pt;
-    margin-right: 7pt;
+#music_block_title p {
+	font-size: 18pt;
+	font-family: 'Kreon', 'Trebuchet MS', Cambria, Cochin, Times, 'Times New Roman', serif;
 }
-#trngl:after {
-    background-image: url('assets/icons/musescore.png');
-    filter: drop-shadow(0px 0px 3px rgba(26, 112, 184, 0.5));
+#cd {
+	position: absolute;
+	height: 800px;
+	right: -300px;
+	bottom: -450px;
+	opacity: 0.3;
+	animation: cd_rotate 30s infinite linear;
+	z-index: -10;
 }
-#slappysloop:after {
-    background-image: url('assets/icons/musescore.png');
-    filter: drop-shadow(0px 0px 3px rgba(26, 112, 184, 0.5));
+@keyframes cd_rotate {
+    0% {
+        transform: rotateZ(0deg);
+    } 100% {
+        transform: rotateZ(-360deg);
+    }
 }
-#richard_y:after {
-    background-image: url('assets/icons/youtube.png');
-    filter: drop-shadow(0px 0px 3px rgba(255, 0, 0, 0.5));
+#album_block {
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
-.cd {
-    width: 400px;
-    height: 400px;
-    background-image: url('assets/ideas/2.jpg');
-    background-size: cover;
-    text-align: right;
+#album_holder {
+	/*height: min(calc(100% - 200px), 550px);*/
+	height: 500px;
+	aspect-ratio: 1;
+	background-size: cover;
+	position: absolute;
+	left: 75px;
+	top: 10%;
+	bottom: 10%;
+	perspective: 1000px;
+	transform-style: preserve-3d;
+}
+#album_section_title {
+	font-size: 18pt;
+	font-family: 'Cardo', 'Palatino', Gill Sans, Tahoma, sans-serif;
+	letter-spacing: -1px;
+	position: absolute;
+	font-weight: 400;
+	margin-top: -30pt;
+	color: rgba(150, 150, 222, 0.8);
+	width: 150%;
+}
+#album_section_title span:first-child {
+	/* To change */
+	font-size: 24pt;
+	font-weight: 700;
+	color: rgba(180, 180, 222, 0.8);
+}
+.album {
+	width: 100%;
+	height: 100%;
+	transform: rotateY(20deg);
+}
+.album * {
+	position: absolute;
+	margin: 0px;
+	user-select: none;
+}
+#album_classical_compositions_solo {
+	background-image: url('assets/ideas/5.jpg');
+	background-size: cover;
+	transform-style: preserve-3d;
+}
+#album_classical_compositions_solo span {
+	top: 15px;
+	right: 15px;
+	width: 60px;
+	height: 120px;
+	background-image: url('assets/seal_two.png');
+	background-repeat: no-repeat;
+	background-size: cover;
+	transform: translateZ(30px);
+	filter: drop-shadow(0px, 0px, 5px, rgba(255, 0, 0, 0.3));
+}
+#album_classical_compositions_solo * {
+	transform: translateZ(30px);
+	text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+#album_classical_compositions_solo h1 {
+	font-size: 72pt;
+	font-family: 'Sofia Sans Extra Condensed';
+	font-weight: 500;
+	color: white;
+	right: 35px;
+	bottom: 10px;
+	text-align: right;
+}
+#album_classical_compositions_solo h2 {
+	font-size: 48pt;
+	font-family: 'Sofia Sans Extra Condensed';
+	font-weight: 300;
+	color: white;
+	right: 215px;
+	bottom: 80px;
+	text-align: right;
+}
+#album_classical_compositions_solo h3 {
+	font-size: 28pt;
+	font-family: 'Sofia Sans Extra Condensed';
+	font-weight: 300;
+	color: white;
+	right: 365px;
+	bottom: 105px;
+	text-align: right;
 }
 
+#album_descriptions:before {
+	content: ' ';
+	position: absolute;
+	width: 100%;
+	height: 125%;
+	left: 0;
+	top: 0;
+	background-image: url("assets/paper_mask_2.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	opacity: 0.8;
+	display: block;
+	z-index: -1;
+}
+#album_descriptions {
+	height: calc(100% - 300px);
+	width: calc(100% - 545px);
+	aspect-ratio: 1;
+	position: absolute;
+	right: 75px;
+	top: 75px;
+	padding-left: 50px;
+	padding-right: 50px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	transform: rotateX(-10deg) rotateY(10deg);
+}
+#album_descriptions h2 {
+	font-size: 42pt;
+	font-family: 'IM Fell DW Pica', Brush Script MT, Georgia, Times, 'Garamond', 'Times New Roman', serif;
+	font-style: italic;
+	font-weight: normal;
+	margin-bottom: 15px;
+	margin-top: 30px;
+}
+#album_descriptions table {
+	border-collapse: collapse;
+	table-layout: fixed;
+	width: 100%;
+}
+#album_descriptions th:first-child {
+	width: 70%;
+}
+#album_descriptions tr:not(:first-child):after {
+	content: 'a';
+	color: rgba(0, 0, 0, 0);
+	position: absolute;
+	left: 20px;
+	/* background-image: linear-gradient(to right, rgba(255, 0, 0, 0.2) 0%, rgba(255, 0, 0, 0) 100%); */
+	background-image: url('assets/album_hovermask_cropped.png');
+	background-size: 100% 100%;
+	font-size: 16pt;
+	width: 85%;
+	font-family: 'Cardo', 'Palatino', Gill Sans, Tahoma, sans-serif;	
+	opacity: 0;
+	transition: 0.3s;
+	z-index: -1;
+	user-select: none;
+	pointer-events: none;
+}
+#album_descriptions tr:not(:first-child):hover:after {
+	opacity: 1;
+	left: 30px;
+}
+#album_descriptions tr:not(:first-child) {
+	transition: 0.3s;
+}
+#album_descriptions tr:not(:first-child):hover {
+	color: rgba(255, 255, 255, 1);
+}
+#album_descriptions th {
+	text-align: left;
+	font-weight: normal;
+	font-style: italic;
+	font-size: 18pt;
+	font-family: 'Cardo', 'Palatino', Gill Sans, Tahoma, sans-serif;
+	color: rgb(100, 100, 100);
+}
+#album_descriptions td {
+	font-size: 16pt;
+	font-family: 'Cardo', 'Palatino', Gill Sans, Tahoma, sans-serif;	
+}
+#album_descriptions td:first-child:before {
+	content: '>>> ';
+	letter-spacing: -5px;
+	margin-left: -18pt;
+	margin-right: 8px;
+	opacity: 0;
+	transition: 0.3s ease;
+	pointer-events: none;
+}
+#album_descriptions td:first-child:hover:before {
+	margin-left: 8px;
+	opacity: 1;
+	color: rgba(255, 255, 255, 1);
+}
 
 #name_block {
     position: absolute;
@@ -270,7 +451,7 @@ body {
     width: 700px;
     min-width: 700px;
     height: 100%;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.3) , rgba(0, 0, 0, 0.1));
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1));
     z-index: -1;
     position: absolute;
     bottom: -6pt;
