--- a/index.css
+++ b/index.css
@@ -210,6 +210,7 @@ body {
 	width: 100%;
 	height: 100%;
 	z-index: 3;
+	display: none;
 }
 #music_block_title {
     position: absolute;
@@ -217,6 +218,15 @@ body {
 	bottom: 35px;
 	text-align: right;
 	transform: rotateX(-10deg) rotateY(10deg);
+	animation: music_block_title_move_in 0.75s ease;
+	transition: 0.5s;
+}
+@keyframes music_block_title_move_in {
+	0% {
+		right: -500px;
+	} 100 {
+		right: 75px;
+	}
 }
 #music_block_title h1 {
 	font-size: 72pt;
@@ -235,8 +245,16 @@ body {
 	right: -300px;
 	bottom: -450px;
 	opacity: 0.3;
-	animation: cd_rotate 30s infinite linear;
+	animation: cd_rotate 30s infinite linear, cd_move_in 0.75s ease;
 	z-index: -10;
+	transition: 0.5s;
+}
+@keyframes cd_move_in {
+	0% {
+		right: -1000px;
+	} 100% {
+		right: -300px;
+	}
 }
 @keyframes cd_rotate {
     0% {
@@ -249,6 +267,16 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	animation: album_block_move_in 0.75s ease;
+	transition: 0.3s;
+	top: 0%;
+}
+@keyframes album_block_move_in {
+	0% {
+		top: -100%;
+	} 100% {
+		top: 0%;
+	}
 }
 #album_holder {
 	/*height: min(calc(100% - 200px), 550px);*/
@@ -260,20 +288,19 @@ body {
 	top: 10%;
 	bottom: 10%;
 	perspective: 1000px;
-	transform-style: preserve-3d;
+	transform-style: preserve-3d; 
 }
 #album_section_title {
 	font-size: 18pt;
-	font-family: 'Cardo', 'Palatino', Gill Sans, Tahoma, sans-serif;
+	font-family: 'Kreon', 'Trebuchet MS', Cambria, Cochin, Times, 'Times New Roman', serif;
 	letter-spacing: -1px;
 	position: absolute;
 	font-weight: 400;
-	margin-top: -30pt;
+	margin-top: -7%;
 	color: rgba(150, 150, 222, 0.8);
 	width: 150%;
 }
-#album_section_title span:first-child {
-	/* To change */
+.album_section_title_active {
 	font-size: 24pt;
 	font-weight: 700;
 	color: rgba(180, 180, 222, 0.8);
@@ -281,17 +308,24 @@ body {
 .album {
 	width: 100%;
 	height: 100%;
-	transform: rotateY(20deg);
+	position: absolute;
+	background-size: cover;
+	transform-style: preserve-3d;
+	display: none;
+}
+.album_active {
+	display: block;
+}
+#album_classical_compositions_solo {
+	background-image: url('assets/ideas/5.jpg');
+}
+#album_classical_arrangements {
+	background-image: url('assets/ideas/2.jpg');
 }
 .album * {
 	position: absolute;
 	margin: 0px;
 	user-select: none;
-}
-#album_classical_compositions_solo {
-	background-image: url('assets/ideas/5.jpg');
-	background-size: cover;
-	transform-style: preserve-3d;
 }
 #album_classical_compositions_solo span {
 	top: 15px;
@@ -336,6 +370,8 @@ body {
 	text-align: right;
 }
 
+
+
 #album_descriptions:before {
 	content: ' ';
 	position: absolute;
@@ -371,13 +407,23 @@ body {
 	margin-bottom: 15px;
 	margin-top: 30px;
 }
+#album_descriptions h2:after {
+	content: '';
+	left: 0;
+	margin-left: 50px;
+	margin-top: 60px;
+	width: calc(100% - 120px);
+	height: 5px;
+	background-image: url("assets/line.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	position: absolute;
+	opacity: 0.8;
+}
 #album_descriptions table {
 	border-collapse: collapse;
 	table-layout: fixed;
 	width: 100%;
-}
-#album_descriptions th:first-child {
-	width: 70%;
 }
 #album_descriptions tr:not(:first-child):after {
 	content: 'a';
@@ -413,10 +459,20 @@ body {
 	font-size: 18pt;
 	font-family: 'Cardo', 'Palatino', Gill Sans, Tahoma, sans-serif;
 	color: rgb(100, 100, 100);
+	transition: 0.5s;
+	overflow: hidden;
 }
+#album_descriptions th:nth-child(1) { width: 60%; }
+#album_descriptions th:nth-child(2) { width: 10%; }
+#album_descriptions th:nth-child(3) { width: 30%; }
+#album_descriptions th:nth-child(4) { width: 0%; }
+
 #album_descriptions td {
-	font-size: 16pt;
-	font-family: 'Cardo', 'Palatino', Gill Sans, Tahoma, sans-serif;	
+	font-size: 14pt;
+	font-family: 'Cardo', 'Palatino', Gill Sans, Tahoma, sans-serif;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+    white-space: nowrap;
 }
 #album_descriptions td:first-child:before {
 	content: '>>> ';
@@ -432,6 +488,120 @@ body {
 	opacity: 1;
 	color: rgba(255, 255, 255, 1);
 }
+#album_previous, #album_next {
+	background-image: url('assets/icons/arrows_serif.png');
+	aspect-ratio: 1;
+	background-size: cover;
+	transition: 0.2s;
+	cursor: pointer;
+}
+#album_previous, #album_next, #album_number {
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+#album_next {
+	width: 70px;
+	margin-right: -15px;
+	margin-top: -10px;
+	filter: brightness(0.9) invert(.7) sepia(.7) hue-rotate(0deg) saturate(250%) brightness(1) drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.8));
+}
+#album_previous {
+	transform: scaleX(-1);
+	width: 50px;
+	margin-right: 90px;
+	margin-top: -20px;
+	filter: brightness(0.9) invert(.7) sepia(.7) hue-rotate(180deg) saturate(250%) brightness(1) drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.8));
+}
+
+#album_next:hover {
+	transform: scale(1.05);
+	filter: brightness(0.9) invert(.7) sepia(.7) hue-rotate(0deg) saturate(250%) brightness(1.1) drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.8));
+}
+#album_previous:hover {
+	transform: scaleX(-1) scale(1.05);
+	filter: brightness(0.9) invert(.7) sepia(.7) hue-rotate(180deg) saturate(250%) brightness(1.1) drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.8));
+}
+#album_next:active {
+	filter: brightness(0.9) invert(.7) sepia(.7) hue-rotate(0deg) saturate(250%) brightness(0.9) drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.8));
+	transition: 0s;
+	margin-right: -17px;
+}
+#album_previous:active {
+	filter: brightness(0.9) invert(.7) sepia(.7) hue-rotate(180deg) saturate(250%) brightness(0.9) drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.8));
+	transition: 0s;
+	margin-right: 92px;
+}
+
+#album_number:before {
+	content: '';
+	color: rgba(0, 0, 0, 0);
+	user-select: none;
+	width: 20px;
+	height: 1px;
+	background-color: white;
+	position: absolute;
+	transform: rotate(-45deg);
+	margin-top: 25px;
+	right: -10px;
+	box-shadow: 1px 1px 2px black, -1px 1px 2px black, -1px -1px 2px black, 1px -1px 2px black;
+}
+#album_number, #album_number:after {
+	font-size: 16pt;
+	font-family: 'Cardo', 'Palatino', Gill Sans, Tahoma, sans-serif;
+	font-style: italic;
+	user-select: none;
+	color: white;
+	text-shadow: -1px 1px 2px rgba(0, 0, 0, 0.5), -1px -1px 2px rgba(0, 0, 0, 0.5), 1px -1px 2px rgba(0, 0, 0, 0.5), 1px 1px 2px rgba(0, 0, 0, 0.5),
+				 0px 1px 2px rgba(0, 0, 0, 0.5), 0px -1px 2px rgba(0, 0, 0, 0.5), -1px 0px 2px rgba(0, 0, 0, 0.5), 1px 0px 2px rgba(0, 0, 0, 0.5);
+}
+#album_number {
+	margin-top: -8px;
+	margin-right: 72px;
+	transition: 0.2s;
+}
+#album_number:after {
+	content: '02';
+	position: absolute;
+	margin-right: -20px;
+	top: 18px;
+}
+#album_previous:hover ~ #album_number, #album_next:hover ~ #album_number {
+	transform: scale(1.03);
+}
+#music_block_back {
+	width: 100%;
+	height: 70px;
+	background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 100%);
+	position: absolute;
+	left: 0;
+	bottom: -22px;
+	text-align: center;
+	letter-spacing: 3px;
+	font-size: 40px;
+	font-family: 'Lusitana', 'Times New Roman', Times, serif;
+	color: rgba(255, 255, 255, 0.4);
+	user-select: none;
+	opacity: 0;
+	transition: 0.3s;
+	cursor: pointer;
+	padding-top: 10px;
+	transform: scaleY(0.5);
+	display: none;
+}
+#music_block_back:hover {
+	padding-top: 20px;
+	bottom: -28px;
+	opacity: 0.8;
+}
+#music_block_back:active {
+	opacity: 1;
+	transition: 0s;
+}
+
+
+
+
 
 #name_block {
     position: absolute;
